--- a/client/app/app.scss
+++ b/client/app/app.scss
@@ -19,6 +19,6 @@ $fa-font-path: "/bower_components/font-awesome/fonts";
 // injector
 @import 'account/login/login.scss';
 @import 'admin/admin.scss';
-@import 'taskLists/taskLists.scss';
+@import 'taskLists/taskLists.sass';
 @import 'modal/modal.scss';
 // endinjector
