--- a/client/app/taskLists/taskLists.jade
+++ b/client/app/taskLists/taskLists.jade
@@ -13,16 +13,14 @@ header#banner.hero-unit
         button.btn.btn-primary.pull-right(ng-click='addTaskList()', tooltip='Dodaj listę zadań')
           span.glyphicon.glyphicon-plus
       .row
-        .col-sm-6.col-md-4(ng-repeat='taskList in taskLists', ng-controller='TaskListCtrl')
+        .task-list.col-sm-6.col-md-4(ng-repeat='taskList in taskLists', ng-controller='TaskListCtrl')
           .thumbnail
             .caption
               h3 {{ taskList.name }}
-                button.close(type='button', ng-click='deleteThing(thing)') ×
+                button.close(type='button', ng-click='deleteTaskList(taskList)', tooltip='Usuń') ×
               div(style="height: 76px")
-                //- p Zadań: 12
                 p Zadania do wykonania: {{ taskList.getNumberOfFinishedTasks() }}
                 p Zadania zakończone: {{ taskList.getNumberOfUnfinishedTasks() }}
-              //- p Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
               p
                 button.btn.btn-primary(href="#" role="button") Pokaż zadania
                 button.btn.btn-default(href="#" role="button") Udostępnij
