--- a/client/app/taskLists/taskLists.sass
+++ b/client/app/taskLists/taskLists.sass
@@ -24,9 +24,14 @@
 button + button
     margin-left: 5px
 
-.task-list .close
-    margin-right: 10px
+.task-list .actions
     display: none
+
+    i:hover
+        cursor: pointer
+
+    i
+        margin-right: 5px
     
-.task-list:hover .close
+.task-list:hover .actions
     display: block
