feature: Polish login page, fixed navbar

--- a/client/app/account/login/login.scss
+++ b/client/app/account/login/login.scss
@@ -28,3 +28,15 @@ $btnGithubBackgroundHighlight:      #ccc;
 .btn-github {
   @include button-variant($btnTextAlt, $btnGithubBackground, $btnGithubBackgroundHighlight);
 }
+
+.login-form {
+	margin-top: 15px;
+}
+
+.o-auth > a {
+	margin-bottom: 10px	
+}
+
+.container hr:last-child {
+	margin-top: 10px;
+}
