--- a/client/app/account/login/login.jade
+++ b/client/app/account/login/login.jade
@@ -2,53 +2,41 @@ div(ng-include='"components/navbar/navbar.html"')
 .container
   .row
     .col-sm-12
-      h1 Login
-      p
-        | Accounts are reset on server restart from
-        code server/config/seed.js
-        | . Default account is
-        code test@test.com
-        | /
-        code test
-      p
-        | Admin account is
-        code admin@admin.com
-        | /
-        code admin
+      h1 Zaloguj
 
     .col-sm-12
-      form.form(name='form', ng-submit='login(form)', novalidate='')
+      form.form.login-form(name='form', ng-submit='login(form)', novalidate='')
         .form-group
           label Email
-          input.form-control(type='text', name='email', ng-model='user.email')
+          input.form-control(type='text', name='email', ng-model='user.email', required)
         .form-group
-          label Password
-          input.form-control(type='password', name='password', ng-model='user.password')
+          label Hasło
+          input.form-control(type='password', name='password', ng-model='user.password', required)
 
         .form-group.has-error
           p.help-block(ng-show='form.email.$error.required && form.password.$error.required && submitted')
-            | Please enter your email and password.
+            | Pola email i hasło są wymagane.
           p.help-block {{ errors.other }}
 
         div
           button.btn.btn-inverse.btn-lg.btn-login(type='submit')
-            | Login
+            | Zaloguj
           = ' '
           a.btn.btn-default.btn-lg.btn-register(href='/signup')
-            | Register
+            | Zarejetruj się
 
         hr
 
-        div
+        div.o-auth
           a.btn.btn-facebook(href='', ng-click='loginOauth("facebook")')
             i.fa.fa-facebook
-            |  Connect with Facebook
+            |  Użyj Facebooka
           = ' '
           a.btn.btn-google-plus(href='', ng-click='loginOauth("google")')
             i.fa.fa-google-plus
-            |  Connect with Google+
+            |  Użyj Google+
           = ' '
           a.btn.btn-twitter(href='', ng-click='loginOauth("twitter")')
             i.fa.fa-twitter
-            |  Connect with Twitter
+            |  Użyj Twittera
   hr
