--- a/client/components/navbar/navbar.jade
+++ b/client/components/navbar/navbar.jade
@@ -10,11 +10,11 @@ div.navbar.navbar-default.navbar-static-top(ng-controller='NavbarCtrl')
 
     div#navbar-main.navbar-collapse.collapse(collapse='isCollapsed')
       ul.nav.navbar-nav
-        li(ng-repeat='item in menu', ng-class='{active: isActive(item.link)}')
-          a(ng-href='{{item.link}}') {{item.title}}
+        li(ng-show='isLoggedIn()', ng-class='{active: isActive("/")}')
+          a(href='/') Listy zadań
 
         li(ng-show='isAdmin()', ng-class='{active: isActive("/admin")}')
-          a(href='/admin') Admin
+          a(href='/admin') Użytkownicy
 
       ul.nav.navbar-nav.navbar-right
         li(ng-hide='isLoggedIn()', ng-class='{active: isActive("/signup")}')
