--- a/client/app/account/login/login.jade
+++ b/client/app/account/login/login.jade
@@ -1,5 +1,5 @@
 div(ng-include='"components/navbar/navbar.html"')
-.container
+.container.login
   .row
     .col-sm-12
       h1 Zaloguj
@@ -23,7 +23,7 @@ div(ng-include='"components/navbar/navbar.html"')
             | Zaloguj
           = ' '
           a.btn.btn-default.btn-lg.btn-register(href='/signup')
-            | Zarejetruj się
+            | Zarejestruj się
 
         hr
 
