--- a/client/app/app.scss
+++ b/client/app/app.scss
@@ -22,3 +22,9 @@ $fa-font-path: "/bower_components/font-awesome/fonts";
 @import 'taskLists/taskLists.sass';
 @import 'modal/modal.scss';
 // endinjector
+
+@media (max-width: $screen-lg-min) {
+	.tooltip {
+		display: none !important;
+	}
+}
