feature: prevent hover actions on mobile devices

--- a/client/app/taskLists/taskLists.sass
+++ b/client/app/taskLists/taskLists.sass
@@ -24,8 +24,11 @@
 button + button
     margin-left: 5px
 
+@media (min-width: $screen-lg-min)
+    .task-list .actions
+        display: none
+
 .task-list .actions
-    display: none
 
     i:hover
         cursor: pointer
