--- a/client/app/taskListDetails/taskListDetails.sass
+++ b/client/app/taskListDetails/taskListDetails.sass
@@ -1,4 +1,15 @@
 .tasks-list
-	.checkbox
-		margin-top: 4px
-		margin-bottom: 4px
+	li
+		.actions
+			display: none
+			margin-top: 4px
+
+			i + i
+				margin-left: 5px
+
+		&:hover .actions
+			display: block
+
+		.checkbox
+			margin-top: 4px
+			margin-bottom: 4px
