feature: show current version in footer

--- a/client/app/taskLists/taskLists.jade
+++ b/client/app/taskLists/taskLists.jade
@@ -33,6 +33,6 @@ header#banner.hero-unit(ng-hide='!taskListsLoaded || taskLists.length')
 footer.footer
   .container
     p
-      | TasksJS v1.0.0
+      | TasksJS v{{ version }}
       = ' | '
       a(href='https://github.com/jsikorski') Jakub Sikorski
