--- a/client/app/account/login/login.jade
+++ b/client/app/account/login/login.jade
@@ -6,16 +6,16 @@ div(ng-include='"components/navbar/navbar.html"')
 
     .col-sm-12
       form.form.login-form(name='form', ng-submit='login(form)', novalidate='')
-        .form-group
+        .form-group(ng-class='{ "has-error": submitted && form.email.$invalid }')
           label Email
           input.form-control(type='text', name='email', ng-model='user.email', required)
-        .form-group
+          p.help-block(ng-show='submitted && form.email.$error.required') Pole email jest wymagane.
+        .form-group(ng-class='{ "has-error": submitted && form.password.$invalid }')
           label Hasło
           input.form-control(type='password', name='password', ng-model='user.password', required)
+          p.help-block(ng-show='submitted && form.password.$error.required') Pole hasło jest wymagane.
 
         .form-group.has-error
-          p.help-block(ng-show='form.email.$error.required && form.password.$error.required && submitted')
-            | Pola email i hasło są wymagane.
           p.help-block {{ errors.other }}
 
         div
