--- a/client/app/taskListDetails/taskListDetails.jade
+++ b/client/app/taskListDetails/taskListDetails.jade
@@ -23,3 +23,6 @@ div(ng-include='"components/navbar/navbar.html"')
 
 
       h3.text-muted(ng-hide='taskList.tasks.length') Brak zadań
+
+
+div(ng-include='"components/footer/footer.html"')
