--- a/client/app/account/settings/settings.jade
+++ b/client/app/account/settings/settings.jade
@@ -2,20 +2,20 @@ div(ng-include='"components/navbar/navbar.html"')
 .container
   .row
     .col-sm-12
-      h1 Change Password
+      h1 Zmień hasło
     .col-sm-12
-      form.form(name='form', ng-submit='changePassword(form)', novalidate='')
-        .form-group
-          label Current Password
+      form.form.change-password-form(name='form', ng-submit='changePassword(form)', novalidate='')
+        .form-group(ng-class='{ "has-error": form.password.$invalid && submitted }')
+          label Aktualne hasło
           input.form-control(type='password', name='password', ng-model='user.oldPassword', mongoose-error='')
           p.help-block(ng-show='form.password.$error.mongoose')
             | {{ errors.other }}
-        .form-group
-          label New Password
+        .form-group(ng-class='{ "has-error": form.newPassword.$invalid && submitted }')
+          label Nowe hasło
           input.form-control(type='password', name='newPassword', ng-model='user.newPassword', ng-minlength='3', required='')
           p.help-block(ng-show='(form.newPassword.$error.minlength || form.newPassword.$error.required) && (form.newPassword.$dirty || submitted)')
-            | Password must be at least 3 characters.
+            | Hasło musi mieć składać się z co najmniej 3 znaków.
 
         p.help-block  {{ message }}
 
-        button.btn.btn-lg.btn-primary(type='submit') Save changes
+        button.btn.btn-lg.btn-primary(type='submit') Zapisz
