feature: sharing task lists

--- a/client/app/app.scss
+++ b/client/app/app.scss
@@ -21,6 +21,7 @@ $fa-font-path: "/bower_components/font-awesome/fonts";
 @import 'account/signup/signup.sass';
 @import 'admin/admin.scss';
 @import 'taskListDetails/taskListDetails.sass';
+@import 'taskListSharing/taskListSharing.sass';
 @import 'taskLists/taskLists.sass';
 @import 'modal/modal.scss';
 // endinjector
